k8s/apps/traffic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic
  namespace: apps
  labels:
    app: traffic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic
  template:
    metadata:
      labels:
        app: traffic
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
        - name: locust
          image: os2-traffic:latest
          imagePullPolicy: IfNotPresent
          command:
            - python
            - daemon.py
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1Gi
