k8s/apps/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: apps
  labels:
    app: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - name: http
      port: 8000
      targetPort: 8000
